[package]
name = "example_open_order"
version = "0.1.0"
edition = "2021"


[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"
serum_dex = {version="0.5.4",features = [ "no-entrypoint" ] }
[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "open_order"
crate-type = ["cdylib", "lib"]
path = "program/lib.rs"